# geosample3d

./: .gitignore  CMakeLists.txt  README  README.md  main.py  pyproject.toml
src/: farthest_point_sampling.cpp  farthest_point_sampling.hpp  main.cpp  pybindings.cpp
src/geosample3d/: __init__.py
